# CPaint

./: CMakeLists.txt  README.md  main.c
utils/: array_utils.c  array_utils.h
